# cilium_monitor

./: AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix  proto-download.sh
src/: flow.rs  formatter.rs  main.rs  observer.rs  relay.rs  stats_formatter.rs  web.rs
static/: app.js  index.html  styles.css
